Update and rename streaming.html to streaming/index..html

--- a/streaming/index..html
+++ b/streaming/index..html
@@ -58,7 +58,7 @@
 <script>
 var newBaseIpAddress = ""
 function loadData() {
-  var textFileUrl = "ipaddress.txt"; // Hardcoded URL of the text file
+  var textFileUrl = "/ipaddress.txt"; // Hardcoded URL of the text file
   var xhr = new XMLHttpRequest();
   
   xhr.onreadystatechange = function() {
