--- a/cronometro/index.html
+++ b/cronometro/index.html
@@ -7,7 +7,7 @@
 <script>
   window.onload = function() {
     // Path to the text file containing the redirect URL
-    var textFile = "ipaddress.txt";
+    var textFile = "/ipaddress.txt";
     var url1 = "http://"
     var ipaddress
     var url2 = ":1880/ui/#!/1"
